--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-  "name": "expressjs-mongoose",
+  "name": "Kykui",
   "private": true,
   "version": "1.0.0",
-  "main": "index.js",
-  "author": "Faraz Patankar",
+  "main": "index.ts",
+  "author": "ItaloCobains",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "mongoose": "^5.12.5"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.22",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.7",
+    "prettier": "^2.7.1",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.8.4"
   }
 }
