--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.17.1",
-    "mongoose": "^5.12.5"
+    "express": "^4.18.2",
+    "helmet": "^6.0.0",
+    "mongoose": "^5.12.5",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.11",
+    "@types/express": "^4.17.14",
+    "@types/helmet": "^4.0.0",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^14.14.22",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
