--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
     "morgan": "^1.10.0"
   },
@@ -28,6 +29,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.14",
     "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/morgan": "^1.9.3",
     "@types/node": "^14.14.22",
     "eslint-config-prettier": "^8.5.0",
