--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-  "name": "Kykui",
-  "private": true,
-  "version": "1.0.0",
-  "main": "index.ts",
-  "author": "ItaloCobains",
-  "license": "MIT",
-  "scripts": {
-    "dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
-  },
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "helmet": "^6.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.5",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/body-parser": "^1.19.2",
-    "@types/cors": "^2.8.12",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.14",
-    "@types/helmet": "^4.0.0",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^14.14.22",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.7.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.8.4"
-  }
+    "name": "Kykui",
+    "private": true,
+    "version": "1.0.0",
+    "main": "index.ts",
+    "author": "ItaloCobains",
+    "license": "MIT",
+    "scripts": {
+        "dev": "nodemon --files src/index.ts",
+        "build": "tsc",
+        "start": "node dist/index.js",
+        "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
+    },
+    "dependencies": {
+        "bcrypt": "^5.1.0",
+        "body-parser": "^1.20.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "helmet": "^6.0.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.12.5",
+        "morgan": "^1.10.0"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/body-parser": "^1.19.2",
+        "@types/cors": "^2.8.12",
+        "@types/dotenv": "^8.2.0",
+        "@types/express": "^4.17.14",
+        "@types/helmet": "^4.0.0",
+        "@types/jsonwebtoken": "^8.5.9",
+        "@types/morgan": "^1.9.3",
+        "@types/node": "^14.14.22",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "jest": "^29.2.2",
+        "nodemon": "^2.0.7",
+        "prettier": "^2.7.1",
+        "ts-node": "^9.1.1",
+        "typescript": "^4.8.4"
+    }
 }
