--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "dev": "nodemon --files src/index.ts",
         "build": "tsc",
         "start": "node dist/index.js",
-        "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
+        "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+        "test": "jest --coverage"
     },
     "dependencies": {
         "bcrypt": "^5.1.0",
@@ -29,14 +30,18 @@
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.14",
         "@types/helmet": "^4.0.0",
+        "@types/jest": "^29.2.0",
         "@types/jsonwebtoken": "^8.5.9",
         "@types/morgan": "^1.9.3",
         "@types/node": "^14.14.22",
+        "@types/supertest": "^2.0.12",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
         "jest": "^29.2.2",
-        "nodemon": "^2.0.7",
+        "nodemon": "^2.0.20",
         "prettier": "^2.7.1",
+        "supertest": "^6.3.1",
+        "ts-jest": "^29.0.3",
         "ts-node": "^9.1.1",
         "typescript": "^4.8.4"
     }
