--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,36 @@
 {
+    "exclude": ["./coverage", "./dist", "__tests__", "jest.config.js"],
+    "ts-node": {
+        "transpileOnly": true,
+        "files": true
+    },
     "compilerOptions": {
-        "outDir": "dist",
-
-        "incremental": true,
-        "target": "es6",
+        "target": "es2016",
         "module": "commonjs",
-        "strict": true,
+        "rootDir": "./src",
+        "moduleResolution": "node",
+        "checkJs": true,
+        "outDir": "./dist",
         "esModuleInterop": true,
-        "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "noImplicitAny": true,
+        "skipLibCheck": true,
         "typeRoots": ["./node_modules/@types", "./@types"]
     }
 }
+
+// {
+//     "compilerOptions": {
+//         "outDir": "dist",
+
+//         "incremental": true,
+//         "target": "es6",
+//         "module": "commonjs",
+//         "strict": true,
+//         "esModuleInterop": true,
+//         "skipLibCheck": true,
+//         "forceConsistentCasingInFileNames": true,
+//         "typeRoots": ["./node_modules/@types", "./@types"]
+//     }
+// }
